$Id$

version 1.6.7 Nya (24/02/2006):

  - setting moddate and modid when deleting customers (alec)
  - BTS#0000511: fixed values localization in prepayments (alec)
  - fixed rights checking while deleting helpdesk's tickets (alec)
  - added cashimport/cashimportparser modules to 'finances management'
    access rule (alec)
  - lmsd/hostfile: fixed 'networks' and 'usergroups' options parsing (alec)
  - fixed timetable events searching by admin (alec)
  - updated ethercodes.txt (alec)
  - using Smarty-2.6.12 (alec)

version 1.6.6 Therra (15/12/2005):

  - fixed summary on customer search results list (alec)
  - fix in NetworkRemap() function for empty destination network (alec)
  - fixed summary of customer's assignments with discounts on
    Customers List (alec)
  - little design and translation fix on netdevinfo (alec)
  - documentation: fixed pg_dump args (alec)
  - bugfix in perl scripts for 64-bit architectures (Jarek Dziubek)

version 1.6.5 Druhin (28/10/2005):

  - BTS#0000450: fixed %DNS2 in lms-mgc (alec)
  - BTS#0000451: lms-rtparser uses also CC: header to get queue ID (alec)
  - BTS#0000453: fixed problem with discount in lms-payments and 
    lmsd/payments (alec)
  - fixed 'New' link in usernodesbox.html called from '?m=useredit' (alec)
  - fixed summary description on balance list printout (alec)
  - lmsd/dhcp: fixed public IP's problem - using hostnames with suffix 
    "_pub" (alec)
  - added lost email, phone, ssn, ten on customers list printout (alec)

version 1.6.4 Mala (25/09/2005):

  - BTS#0000426: fixed value in contrib/formularz_przelewu_wplaty (alec)
  - BTS#0000428: fixed misprint in polish translation (alec)
  - BTS#0000420: fixed tax/net calculations in Sale Registry (alec)
  - added support for Userpanel configuration (alec)
  - invoice items are sorted by item id (alec)
  - public IP checking when filtering customers list by network (alec)
  - BTS#0000447: lmsd/dhcp: added support for public IP addresses (alec)